# devoxxfr26-oauth2

./: README.md  anubis.sh  devoxxfr26.sh  enforced.sh  group.sh  install.sh  kyverno.sh  secure.sh  test-csrf.sh
app/: Dockerfile  app.py  build_push.sh  pyproject.toml  run_locally.sh
app/.streamlit/: config.toml
docker/: Dockerfile
docs/: architecture.md
k8s/: anubis-policy.yaml  anubis.yaml  keycloak-ingress.yaml  keycloak-realm.json  keycloakx-values.yaml  kind-config.yaml  kyverno-oauth2-policy-enforced.yaml  kyverno-oauth2-policy.yaml  oauth2-proxy-ingress.yaml  oauth2-proxy-values.yaml  streamlit-ingress-kyverno.yaml  streamlit-keycloak.yaml  streamlit.yaml
k8s-gateway-api/: gateway.yaml  install.sh  keycloak-httproute.yaml  kind-config.yaml  ngf-values.yaml  oauth2-proxy-values.yaml  streamlit-httproute.yaml  streamlit.yaml
